Get by id endpoints
